--- a/.github/workflows/export-web.yml
+++ b/.github/workflows/export-web.yml
@@ -3,30 +3,22 @@ name: Export Expo Web
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
 
-      - name: Build static web export
-        run: npm run export:web
+      - run: npm run export:web
 
-      - name: Upload web files
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: expo-web
           path: dist/
