--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build-web:
     runs-on: ubuntu-latest
+    environment: production
     defaults:
       run:
         working-directory: front-end
