--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -18,7 +18,6 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -30,9 +29,17 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     # Build Ayudantes App
+    - name: Cache node modules for Ayudantes
+      uses: actions/cache@v3
+      with:
+        path: front-end/ayudantes/node_modules
+        key: ${{ runner.os }}-ayudantes-${{ hashFiles('front-end/ayudantes/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-ayudantes-
+
     - name: Install dependencies for Ayudantes
       working-directory: ./front-end/ayudantes
-      run: npm install
+      run: npm ci || npm install
 
     - name: Build Ayudantes static files
       working-directory: ./front-end/ayudantes
@@ -41,9 +48,17 @@ jobs:
         npx expo export -p web --output-dir dist
 
     # Build Estudiantes App
+    - name: Cache node modules for Estudiantes
+      uses: actions/cache@v3
+      with:
+        path: front-end/estudiantes/node_modules
+        key: ${{ runner.os }}-estudiantes-${{ hashFiles('front-end/estudiantes/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-estudiantes-
+
     - name: Install dependencies for Estudiantes
       working-directory: ./front-end/estudiantes
-      run: npm install
+      run: npm ci || npm install
 
     - name: Build Estudiantes static files
       working-directory: ./front-end/estudiantes
