--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -439,3 +439,72 @@ jobs:
         echo "✅ All services built and pushed successfully!"
         echo "🔍 Security scans completed"
         echo "🎯 Ready for deployment"
+
+  # ========================================
+  # NOTIFICAR SERVIDOR REMOTO
+  # ========================================
+  notify-server:
+    name: Notify Remote Server
+    runs-on: ubuntu-latest
+    needs: [frontend, backend]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    
+    steps:
+    - name: Generate webhook payload
+      id: payload
+      run: |
+        PAYLOAD=$(cat << EOF
+        {
+          "ref": "${{ github.ref }}",
+          "repository": "${{ github.repository }}",
+          "commit": "${{ github.sha }}",
+          "pusher": "${{ github.actor }}",
+          "timestamp": "$(date -u +%Y-%m-%dT%H:%M:%SZ)"
+        }
+        EOF
+        )
+        echo "payload=$PAYLOAD" >> $GITHUB_OUTPUT
+
+    - name: Generate signature
+      id: signature
+      run: |
+        SIGNATURE=$(echo -n '${{ steps.payload.outputs.payload }}' | openssl dgst -sha256 -hmac '${{ secrets.WEBHOOK_SECRET }}' | cut -d' ' -f2)
+        echo "signature=sha256=$SIGNATURE" >> $GITHUB_OUTPUT
+
+    - name: Trigger server update
+      run: |
+        echo "🚀 Enviando webhook al servidor..."
+        
+        RESPONSE=$(curl -s -w "%{http_code}" \
+          -X POST \
+          -H "Content-Type: application/json" \
+          -H "X-Hub-Signature-256: ${{ steps.signature.outputs.signature }}" \
+          -d '${{ steps.payload.outputs.payload }}' \
+          ${{ secrets.SERVER_WEBHOOK_URL }}/webhook/docker-update)
+        
+        HTTP_CODE="${RESPONSE: -3}"
+        BODY="${RESPONSE%???}"
+        
+        echo "📊 Código de respuesta: $HTTP_CODE"
+        echo "📝 Respuesta: $BODY"
+        
+        if [ "$HTTP_CODE" -eq 200 ]; then
+          echo "✅ Webhook enviado exitosamente"
+        else
+          echo "❌ Error enviando webhook"
+          exit 1
+        fi
+
+    - name: Verify server health
+      run: |
+        echo "🔍 Verificando salud del servidor..."
+        
+        sleep 5  # Dar tiempo para que el servidor procese
+        
+        HEALTH_RESPONSE=$(curl -s ${{ secrets.SERVER_WEBHOOK_URL }}/webhook/health || echo "ERROR")
+        
+        if echo "$HEALTH_RESPONSE" | grep -q "healthy"; then
+          echo "✅ Servidor saludable"
+        else
+          echo "⚠️  Servidor no responde correctamente"
+        fi
